<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="350dp"
    android:minHeight="700dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/tvLocationVisited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/looks_like_you_visited"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvLocationVisitedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location Name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:ellipsize="end"
        android:scrollHorizontally="false"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLocationVisited"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLocationVisitedName"/>

    <EditText
        android:id="@+id/etReview"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:hint="@string/leave_review"
        android:inputType="textMultiLine"
        android:lines="8"
        android:layout_marginHorizontal="20dp"
        android:padding="20dp"
        android:background="@drawable/border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"/>

    <View
        android:id="@+id/vUpload"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:background="@drawable/dashed_border_background"
        android:layerType="software"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etReview"/>

    <ImageView
        android:id="@+id/ivUploadedImage"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintStart_toStartOf="@id/vUpload"
        app:layout_constraintEnd_toEndOf="@id/vUpload"
        app:layout_constraintTop_toTopOf="@id/vUpload"
        app:layout_constraintBottom_toBottomOf="@id/vUpload"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/llUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@id/vUpload"
        app:layout_constraintEnd_toEndOf="@id/vUpload"
        app:layout_constraintTop_toTopOf="@id/vUpload"
        app:layout_constraintBottom_toBottomOf="@id/vUpload"
        android:visibility="visible">

        <ImageView
            android:id="@+id/ivUploadImageIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/image_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvUploadImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmitReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vUpload"/>


</androidx.constraintlayout.widget.ConstraintLayout>